--- a/module 2/Season 1/index.html
+++ b/module 2/Season 1/index.html
@@ -82,7 +82,23 @@
             <li>Kerastase</li>
             <li>Johnny Andrean</li>
         </ul>
+    <li>Skincare</li>
+        <ul>
+            <li>Laneige</li>
+            <li>Keihls</li>
+        </ul>
 </ul>
 <hr />
 
-
+<h2>Shopping Cart for Cat</h2>
+<ol>
+    <li>Stretcher</li>
+    <li>Happy Cat (Cat Food)</li>
+        <ol>
+            <li>Dry Food</li>
+            <li>Wet Food</li>
+        </ol>
+    <li>Tofu (Pasir)</li>
+</ol>
+<hr />
+  
