--- a/module 2/Season 1/index.html
+++ b/module 2/Season 1/index.html
@@ -102,3 +102,52 @@
 </ol>
 <hr />
   
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Region</th>
+    </tr>
+    <tr>
+        <td>Sasha</td>
+        <td>Jakarta</td>
+    </tr>
+    <tr>
+        <td>Teuku</td>
+        <td>Tangerang</td>
+    </tr>
+</table>
+<hr />
+
+<table>
+    <tr>
+        <th>Name</th>
+        <th>Region</th>
+    </tr>
+    <tr>
+        <td colspan="2">
+            <center>Sasha</center></td>
+        <td>Jakarta</td>
+    </tr>
+    <tr>
+        <td>Teuku</td>
+        <td>Tangerang</td>
+    </tr>
+</table>
+<hr />
+
+<table>
+    <tr>
+        <th rowspan="2">Name</th>
+        <th>Region</th>
+    </tr>
+    <tr>
+        <td>Sasha</td>
+        <td>Jakarta</td>
+    </tr>
+    <tr>
+        <td>Teuku</td>
+        <td>Tangerang</td>
+    </tr>
+</table>
+<hr />
+
